--- a/DiceGame/Base.lproj/Main.storyboard
+++ b/DiceGame/Base.lproj/Main.storyboard
@@ -20,8 +20,8 @@
                                 <rect key="frame" x="0.0" y="0.0" width="852" height="393"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="dice1" translatesAutoresizingMaskIntoConstraints="NO" id="MoZ-Hw-W4x" userLabel="diceImage">
-                                <rect key="frame" x="352" y="43" width="150" height="150"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="dice1" translatesAutoresizingMaskIntoConstraints="NO" id="MoZ-Hw-W4x" userLabel="diceImage1">
+                                <rect key="frame" x="272" y="43" width="150" height="150"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Player 1" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VVW-0b-rwU" userLabel="player 1">
@@ -39,7 +39,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bZm-gg-pCF" userLabel="player1Total">
-                                <rect key="frame" x="126" y="110" width="138" height="82"/>
+                                <rect key="frame" x="126" y="111" width="138" height="82"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" name="ArialRoundedMTBold" family="Arial Rounded MT Bold" pointSize="70"/>
                                 <color key="textColor" red="0.83216959239999999" green="0.98548370600000001" blue="0.47333085539999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -98,7 +98,7 @@
                                     <color key="titleColor" red="0.098476625989999997" green="0.2241870544" blue="0.22846571909999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 </state>
                                 <connections>
-                                    <action selector="hold:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Rb3-Y3-ib2"/>
+                                    <action selector="hold:" destination="BYZ-38-t0r" eventType="touchUpInside" id="dbJ-pE-gJj"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="m3D-yL-EKL">
@@ -112,7 +112,7 @@
                                     <color key="titleColor" red="0.098476625989999997" green="0.2241870544" blue="0.22846571909999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 </state>
                                 <connections>
-                                    <action selector="reset:" destination="BYZ-38-t0r" eventType="touchUpInside" id="6es-C0-du8"/>
+                                    <action selector="reset:" destination="BYZ-38-t0r" eventType="touchUpInside" id="iWi-Ax-znU"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="R2r-k3-NGd">
@@ -126,7 +126,7 @@
                                     <color key="titleColor" red="0.098476625989999997" green="0.2241870544" blue="0.22846571909999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 </state>
                                 <connections>
-                                    <action selector="roll:" destination="BYZ-38-t0r" eventType="touchUpInside" id="0rX-Qv-g81"/>
+                                    <action selector="roll:" destination="BYZ-38-t0r" eventType="touchUpInside" id="KND-PJ-8pY"/>
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DaE-Jl-mqv" userLabel="player2Total">
@@ -136,12 +136,17 @@
                                 <color key="textColor" red="0.83216959239999999" green="0.98548370600000001" blue="0.47333085539999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="dice1" translatesAutoresizingMaskIntoConstraints="NO" id="znj-ed-wgX" userLabel="diceImage2">
+                                <rect key="frame" x="430" y="43" width="150" height="150"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
                     <connections>
-                        <outlet property="diceImage" destination="MoZ-Hw-W4x" id="PdA-jK-LVM"/>
+                        <outlet property="diceImage1" destination="MoZ-Hw-W4x" id="X43-sh-hW5"/>
+                        <outlet property="diceImage2" destination="znj-ed-wgX" id="DJS-Nn-6Yh"/>
                         <outlet property="holdButton" destination="XPC-8b-sz7" id="f2t-BC-HF5"/>
                         <outlet property="player1DicePointLabel" destination="uzw-OB-kpc" id="Q9k-xD-rHF"/>
                         <outlet property="player1TotalLabel" destination="bZm-gg-pCF" id="4vf-Si-0jB"/>
